app/styles/projects.module.css
.main {
    width: 80%;
    margin-bottom: 1rem;
    margin-left: 2rem;
    margin-right: 2rem;

    display: flex;
    flex-direction: column;
    gap: .75rem;
    align-items: center;
}

.child {
    max-width: 100%;

    position: relative;
    display: flex;
    flex-direction: column;
}

.head {
    overflow: hidden;
    display: flex;
    align-items: center;
    padding: 2rem;
    background-color: var(--card-color);
    border: 2px var(--border-color) solid;
    border-bottom: 0;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;

    flex-shrink: 0;

    position: relative;

    transition: border-color .8s cubic-bezier(.215, .61, .355, 1);
}

.head img {
    width: 10rem;
    height: 10rem;
    border-radius: 50%;
    box-shadow: #3E3E3E 0px 0px 200px;
}

.name {
    position: relative;
    z-index: 9999;
    text-align: left;
    margin-left: 2rem;
}

.name p {
    font-size: 90%;
    color: #C0C0C0;
}


.body {
    background-color: var(--card-color);
    border: 2px var(--border-color) solid;
    text-align: justify;
    padding: 1rem;
    overflow: hidden;
    border-radius: 0 0 10px 10px;

    height: 100%;

    display: flex;
    flex-direction: column;
    justify-content: space-between;

    transition: border-color .8s cubic-bezier(.215, .61, .355, 1);
}

.child:hover .head,
.child:hover .body {
    border-color: color-mix(in srgb, var(--border-color) 80%, white 20%);
}

.body h1 {
    margin: 0;
    font-size: 150%;
    margin-bottom: 1rem;
}

.body p {
    font-size: 1rem;
    box-sizing: border-box;
    margin: 0;
}

.body a {
    color: var(--main-action-color);
    font-weight: 500;

    transition: color .15s;
}

.body a:hover {
    color:
        color-mix(in srgb, var(--main-action-color) 80%, white 20%);
}

.body button {
    background: none;
    border: none;
    color: #adadad;
    cursor: pointer;
    padding: 0;
    font-size: 100%;
    margin-top: 5px;
}

.body code {
    background-color: var(--border-color);
    padding: .1rem .3rem;

    border: 1px var(--placeholder-color) solid;
    border-radius: 5px;
}

.footer {
    margin-top: 1.5rem;
    display: flex;
    gap: 0.7rem;
    flex-wrap: wrap;
}

.button {
    color: white;
    background-color: var(--buttons-color);
}

.button p {
    margin: 0;
    font-size: 1rem;
}

.tag {
    position: relative;
    z-index: 9999;
    border: 2px var(--border-color) solid;
    background-color: var(--card-color);
    padding: .375rem 1rem;
    border-radius: 9999px;
    font-size: 12px;
    font-weight: 500;
    box-sizing: border-box;
    text-wrap: nowrap;
}

.tags_cont {
    display: flex;
    flex-wrap: wrap;
    gap: .4rem;
    margin-top: .5rem;
}

.description_animated {
    transform: none;
    transition: height 500ms;
    height: var(--height);
    overflow: hidden;
}

.projects_grid {
    grid-template-columns: repeat(auto-fill, minmax(auto, 700px));
    justify-content: center;
    gap: .75rem;
    width: 100%;
    display: grid;
}


.more {
    box-sizing: border-box;
    width: calc(1400px + .75rem);
}

.background {
    background-image: var(--img-url);
    background-size: 80px;
    background-repeat: repeat;
    position: absolute;

    top: -100%;
    left: -100%;
    bottom: -100%;
    right: -100%;

    opacity: .15;
    transform: rotate(-30deg);
}

.in_dev_main {
    position: absolute;
    left: 0;
    top: 0;

    z-index: 1000;
    background-color: white;
    color: black;
    font-weight: bold;


    padding: 0 2rem;

    transform: rotate(-45deg) translate(-29%, -12px);
}


@media(max-width: 1774px) {
    .more {
        width: 700px;
    }
}

@media(max-width: 970px) {
    .main {
        width: 90%;
    }

    .head {
        flex-direction: column;
        vertical-align: middle;
    }

    .name {
        margin-left: 0;
        margin-top: 0.5rem;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .name h1 {
        text-align: center;
    }

    .tags_cont {
        justify-content: center;
    }

    .more {
        width: 100%;
    }
}

